src/test/rustdoc-ui/issue-61732.stderr
error[E0433]: failed to resolve: maybe a missing crate `r#mod`?
  --> $DIR/issue-61732.rs:3:15
   |
LL | pub(in crate::r#mod) fn main() {}
   |               ^^^^^ maybe a missing crate `r#mod`?

error: Compilation failed, aborting rustdoc

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
